--- a/www/assets/css/index.css
+++ b/www/assets/css/index.css
@@ -4,15 +4,11 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 250px;
+    height: 100vh;
+    width: 100vw;
 }
 
-html{
-    height: 100%;
-}
 body{
-    height: 100%;
-    width: 100%;
     flex-direction: column;
     
 }
@@ -28,4 +24,17 @@ body{
     --color4: #99CCFF;
     --color5: #99CCCC;
     --color6: #F0F8FF;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+background: var(--color5);
+}
+::-webkit-scrollbar-thumb {
+background: var(--color3)
+}
+::-webkit-scrollbar-thumb:hover {
+background: var(--color2);
 }
