--- a/www/assets/css/editor.css
+++ b/www/assets/css/editor.css
@@ -49,7 +49,7 @@
 .carouselSlide{
   aspect-ratio: var(--AR_width) / var(--AR_height);
   background-image: url("../img/default.jpg");
-  background-size: 100% 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment:local;
@@ -66,6 +66,7 @@
   height: auto;
   flex: 0 0 auto;
   border-radius: 10px;
+  position: relative;
 }
 
 #addSlide.carouselSlide{
@@ -116,6 +117,23 @@
   content: "Slide Attiva";
 }
 
+
+.carouselSlide>.deleteButton{
+  background: url("../img/delete.png");
+  background-color: brown;
+  background-size: 75% !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  border: 1px solid var(--color6);
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  width: 15%;
+  height: auto;
+  position: absolute;
+  left: 5%;
+  bottom: 5%
+}
+
 #slideEditorArea{
   margin: 0;
   background: var(--color6);
@@ -134,7 +152,7 @@
     margin: 0 auto;
     background: var(--color2);
     background-image: url("../img/default.jpg");
-    background-size: 100% 100% !important;
+    background-size: cover !important;
     background-repeat: no-repeat !important;
     background-position: center !important;
     background-attachment:local !important;
